<resources>
    <string name="app_name">Prebaby</string>
    <string name="login">Login</string>
    <string name="Tour">Take a Tour</string>
    <string name="SignupNow">Sign up Now</string>
    <string name="SignUp">Sign Up</string>
    <string name="UsernameOrEmail">Username Or Email</string>
    <string name="Username">Username</string>
    <string name="pass">Password</string>
    <string name="forget">Forget Your Password</string>
    <string name="loginwith">Login With</string>
    <string name="email">Email</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="mobile">Mobile</string>
    <string name="register">Registration</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="blood">Blood Pressure</string>
    <string name="birth">Date of Birth</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="myweek">Myweek</string>
    <string name="dashboard">Dashboard</string>
    <string name="more">More</string>
    <string name="appoint">Doctor Appointment</string>
    <string name="editprofile">Edit Profile</string>
    <string name="saveprofile">Save Profile</string>
    <string name="count">Count down</string>
    <string name="baby_size">Predicted Baby Size</string>
    <string name="baby_height">Predicted Baby Height</string>
    <string name="tips">Tips</string>
    <string name="articles">Articles</string>
    <string name="question">Questions</string>
    <string name="reminder">Reminder</string>
    <string name="calendar">Calendar</string>
    <string name="weeknumber">Week Number</string>
    <string name="empty">empty</string>
    <string name="addalert">Add Alert</string>
    <string name="fab_add_note">Add Note</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="enter_a_reminder">Enter a reminder..</string>
    <string name="action_bar_create_alert">Create Alert</string>
    <string name="action_bar_edit_alert">Edit Alert</string>
    <string name="action_bar_create_note">Create Note</string>
    <string name="action_bar_edit_note">Edit Note</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="save_prompt">Do you want to save?</string>
    <string name="delete_prompt">Are you sure you want to delete?</string>
    <string name="repeat">Repeat</string>
    <string name="show_all_toast">Showing all items</string>
    <string name="show_alerts_toast">Showing all alerts</string>
    <string name="show_notes_toast">Showing all notes</string>
    <string name="notereminder">Note Or Reminder</string>
    <string name="create">Create it</string>
    <string name="not_available">Not Available</string>
    <string name="dateperiod">What is the date of last period ?</string>
    <string name="date">Date</string>
    <string name="weightBeforeAfter">What is the weight before and during pregnancy ?</string>
    <string name="before">before</string>
    <string name="after">After</string>
    <string name="tired">Tired</string>
    <string name="vomiting">Vomiting</string>
    <string name="dizzy">Dizzy</string>
    <string name="headache">Headache</string>
    <string name="backache">Backache</string>
    <string name="do_you_get">Do you get ?</string>
    <string name="leg_cramps">Leg cramps</string>
    <string name="blood_pressure_measure">What is your blood pressure measure ?</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="is_there">Is There ?</string>
    <string name="insomnia">Insomnia</string>
    <string name="visual_disturbance">Visual disturbance</string>
    <string name="darker_places">Darker places</string>
    <string name="out_of_breath">Out of breath</string>
    <string name="baby_moves">Baby moves</string>
    <string name="partial_water_break">Partial water break</string>
    <string name="heartburn">Heartburn</string>
    <string name="gynaecological_infection">Gynaecological infection</string>
    <string name="abdominal_pain">Abdominal pain</string>
    <string name="once">Once</string>
    <string name="frequent">Frequent</string>
    <string name="swollen">Swollen</string>
    <string name="number">number</string>
    <string name="protein_in_urine">Protein in urine</string>
    <string name="breast_leek">Breast leek</string>
    <string name="flattened_navel">Flattened navel</string>
    <string name="toilet_more_often">Toilet more often</string>
    <string name="thirsty_long">Thirsty as long</string>
    <string name="dehydration">Dehydration</string>
    <string name="haemoglobin">What is the percent of Haemoglobin ?</string>
    <string name="rh_type">RH Type</string>
    <string name="negative">Negative</string>
    <string name="positive">Positive</string>
    <string name="glucose">Glucose</string>
    <string name="ptt">PTT</string>
    <string name="coloured">Coloured</string>
    <string name="uncoloured">Uncoloured</string>
    <string name="vaginal_discharge">Vaginal discharge</string>
    <string name="medium">Medium</string>
    <string name="paragraph"> Our Tips </string>
    <string name="baby">Baby</string>
    <string name="mom_to_be">Mom To Be</string>
    <string name="tip_of_week">Tip Of Week</string>
    <string name="chart">chart</string>
    <string name="posted_by">Posted by</string>
    <string name="comments">Comments</string>
    <string name="posted">Posted by:</string>
    <string name="description">Description</string>
    <string name="comment_details">Comment Details</string>
    <string name="comment_time">Comment Time</string>
    <string name="enter_your_comment">Enter Your Comment</string>
    <string name="send">Send</string>
    <string name="create_post">Create post</string>
    <string name="post">Post</string>
    <string name="tip_of_day">Tip Of Day</string>
    <string name="tip">tip</string>
    <string name="how_much_water_do_you_drink">How much water do you drink ?</string>
    <string name="how_much_do_you_sleep">How much do you sleep ?</string>
    <string name="do_you_eat_today">Do you eat today?</string>
    <string name="do_you_eat_meals">Do you ate 3 or 4 meals today ?</string>
    <string name="do_you_take_vitamins">Do you take your daily vitamins?</string>
    <string name="keep_sign_in">Keep Sign in</string>
    <string name="profile_pic">Upload Profile Picture</string>
    <string name="date_peroid">Date of Period</string>
    <string name="country_prompt">Choose a country</string>
    <string name="community">Community</string>
    <string name="weekly_questions">Weekly Questions</string>
    <string name="apply">Apply</string>
    <string name="result">Result</string>
    <string name="what_weight">What\'s your weight ?</string>
    <string name="daily_questions">Daily Questions</string>
    <string name="log_out">Log out</string>
    <string name="my_weekly_reports">My Weekly Reports</string>
    <string name="baby_information">Baby Information</string>
    <string name="continue_to_home">Continue To Home</string>
</resources>