<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regis"
    android:orientation="vertical"
    tools:context="com.usama.salamtek.RegistrationActivity">

    <TextView
        android:id="@+id/registerId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <View
        android:id="@+id/registerView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/registerId"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/white" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/edittextstyle"
        android:drawableLeft="@drawable/mailiconp"
        android:drawablePadding="12dp"
        android:hint="@string/email"
        android:inputType="text"
        android:maxLines="1"
        android:textColorHint="#ffffff" />


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittextstyle"
        android:drawableLeft="@drawable/ic_person_white_24dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittextstyle"
        android:drawableLeft="@drawable/birth"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/age"
        android:maxLines="1"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birth"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittextstyle"
        android:drawableLeft="@drawable/smartphone"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/mobile"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobile"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittextstyle"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/confirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittextstyle"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/confirmPass"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPass"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittextstyle"
        android:drawableLeft="@drawable/country"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/country"
        android:maxLines="1"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/country"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittextstyle"
        android:drawableLeft="@drawable/city"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/city"
        android:maxLines="1"
        android:textColorHint="#ffffff" />


    <Button
        android:id="@+id/regs_bun"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@+id/city"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btnstyle3"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/SignUp"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="normal" />


</RelativeLayout>
