<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homedesign"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.usama.salamtek.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="190dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_person_white_24dp"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/ic_person_white_24dp"
        android:ems="10"
        android:hint="@string/UsernameOrEmail"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="#ffffff" />


    <EditText
        android:id="@+id/login_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/ic_lock_white_24dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textColor="@color/white"
        android:textColorHint="#ffffff" />


    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forget"
        android:textColor="#fff"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="115dp"
        android:layout_marginRight="115dp"
        android:background="@color/white" />


    <Button
        android:id="@+id/login_btn"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btnstyle"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#0f7e9b"
        android:textSize="18sp"
        android:textStyle="normal" />


    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/loginwith"
        android:textColor="#fff"
        android:textSize="18sp" />


    <ImageButton
        android:id="@+id/gmail_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:src="@drawable/gplus" />


</LinearLayout>
